--- a/scss/_medium.scss
+++ b/scss/_medium.scss
@@ -117,5 +117,10 @@ nav {
 	grid-column: 1 / span 2;
 }
 
+// Social Bar Styles
+#socialBar i {
+	padding: 0 1rem;
+}
+
 /*----------- FOOTER --------------*/
     
