--- a/scss/_small.scss
+++ b/scss/_small.scss
@@ -215,7 +215,7 @@ picture img {
     padding: 2rem;
 }
 #socialBar i {
-    padding: 0 1rem;
+    padding: 0 .5rem;
     transition: all .4s;
 }
 #socialBar i:hover {
